front/src/scenes/Dashboard/components/ContentTab/index.css
:local .tab {
  font-size: 16px;
  text-align: center;
}

:local .tab > a {
  position: relative;
  display: block;
  padding: 10px 15px;
  background-color: #FFFFFF;
  color: #666666;
}

@media (min-width: 768px) {
  .tab {
    display: table-cell;
    width: 1%;
  }
  .tab > a {
    margin-bottom: 0;
  }
}

:local .tabsContainer {
  width: 100%;
  margin-bottom: 0;
  padding-left: 0;
  list-style: none;
  border-bottom: 1px #EEEEEE solid;
  -webkit-box-shadow: 0px 6px 24px -19px rgba(0,0,0,0.75);
  -moz-box-shadow: 0px 6px 24px -19px rgba(0,0,0,0.75);
  box-shadow: 0px 6px 24px -19px rgba(0,0,0,0.75);
}

:local .tabContent {
  background: #ffffff;
  padding: 20px;
  margin-bottom: 40px;
}

:local .active {
  background-color: #EEEEEE !important;
}

@media (min-width: 992px) {
  .stickyContainer {
    padding-top: 8px;
    position: sticky;
    top: 45px;
    z-index: 4;
  }
}

:local .stickyContainer {
  background-color: white;
}

